# HaskellBook2020

Chapter14-testing/: .gitignore
HaskellBookEnv/: ChangeLog.md  HaskellBookEnv.cabal  README.md  packageAlf.yaml
HaskellBookEnv/Chapter21/: Main.hs
HaskellBookEnv/src/: Ch02.06Compre.hs  Ch21.08HttpStuff.hs  Ch24.03ParsingProcess.hs  Ch24.04.hs  Lib.hs
HaskellBookEnv/src/Chapter21/: HaskellBookEnv.cabal  package.yaml
