name:           HaskellBookEnv
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/HaskellBookEnv#readme>
homepage:       https://github.com/githubuser/HaskellBookEnv#readme
bug-reports:    https://github.com/githubuser/HaskellBookEnv/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2020 Author name here
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/githubuser/HaskellBookEnv

library
  exposed-modules:
      Lib
  other-modules:
      Paths_HaskellBookEnv
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:      base >=4.7 && <5
                     , hspec
                     , ansi-terminal
                     , QuickCheck
                     , checkers
                     , bytestring
                     , wreq
                     , random
                     , trifecta
                     , parsers
                     , raw-strings-qq
                     , containers
                     , text
                     , aeson
                     , scientific
                     , transformers
                     , time
                     , safe
                     , scotty
                     , criterion
                     , vector
                     , directory
                     , simple-reflect

  default-language: Haskell2010

executable HaskellBookEnv-exe
  main-is: Main.hs
  other-modules:
      Paths_HaskellBookEnv
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , containers
    , haskellbookenv
    , hspec
    , transformers
  default-language: Haskell2010

-- executable Ch21
--   main-is: Main.hs
--   other-modules:
--       Ch2106TraverseMorse
--       Paths_HaskellBookEnv
--   hs-source-dirs:
--       Chapter21
--   ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
--   build-depends:
--       HaskellBookEnv
--     , QuickCheck
--     , base >=4.7 && <5
--     , bytestring
--     , checkers
--     , containers
--     , hspec
--     , simple-reflect
--     , transformers
--     , wreq
--   default-language: Haskell2010

-- executable Ch2test
--   main-is: Main.hs
--   other-modules:
--       Ch2106TraverseMorse
--       Paths_HaskellBookEnv
--   hs-source-dirs:
--       Chapter21
--   ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
--   build-depends:
--       HaskellBookEnv
--     , QuickCheck
--     , base >=4.7 && <5
--     , bytestring
--     , checkers
--     , containers
--     , hspec
--     , simple-reflect
--     , transformers
--     , wreq
--   default-language: Haskell2010

test-suite HaskellBookEnv-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_HaskellBookEnv
  hs-source-dirs:
      test
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      HaskellBookEnv
    , QuickCheck
    , base >=4.7 && <5
    , bytestring
    , checkers
    , containers
    , hspec
    , simple-reflect
    , transformers
    , wreq
  default-language: Haskell2010
